BaSP-W03-2022: Error correction and modified readme

--- a/semana-02/index.html
+++ b/semana-02/index.html
@@ -71,88 +71,101 @@
                     </li>
             </nav>
         </aside>
-    <main>
-            <section class="header-background">
-                <img src="assests/img.png/header-picture.png" alt="Header Picture">
-                <div class="header-text">
-                    <h1 class="header-tittle">
-                        Trackgenix
-                    </h1>
-                    <div>
-                        By GigaTech Sowtware Solutions SA
-                    <p>
-                        The company GigaTech Sowtware Solutions SA provides sowtware development services to other
-                        companies,wich have too many employees. Because of this "Trackgenix" was created.
-                    </p>
-                    <p class="header-text-description">
-                        "Trackgenix" is a web page that facilitates the registration of hours worked by each employee in each
-                        project and provides information to the companies so they can make better decisions.
-                    </p>
-                </div>
-            </section>
-        <section>
-            <article>
+        <header>
+            <div class="header-background">
+                <h1>
+                    Trackgenix
+                </h1>
                 <h2>
-                    Who we are
+                    By GigaTech Sowtware Solutions SA
                 </h2>
-                <div>
-                    <!-- <img src="assests/img.png/work-traceability-picture.png" alt="Work Traceability Picture"> -->
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
-                        dummy text of the printing and typesetting industry.Lorem Ipsum is simply text of the printing
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
-                        dummy text of the printing and typesetting industry.Lorem Ipsum is simply text of the printing
-                        and typesetting industry.
-                    </p>
-                </div>
-            </article>
+                <p>
+                    The company GigaTech Sowtware Solutions SA provides sowtware development services to other
+                    companies,wich have too many employees. Because of this "Trackgenix" was created.
+                </p>
+                <p class="header-text-description">
+                    "Trackgenix" is a web page that facilitates the registration of hours worked by each employee in each
+                    project and provides information to the companies so they can make better decisions.
+                </p>
+            </div>
+        </header>
         <section>
-            <h2>
-                 Why choose us?
-            </h2>
-            <div>
-                <h3>
-                    Productivy Booter
-                </h3>
-                <img src="assests/img.png/productivy-booter-picture.png" alt="Productivy Booter picture">
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                    make a type specimen book.
-                </p>
+            <div class="main-container">
+                <h2 class="text-size-35 text-center">
+                    Why Choose Us?
+                </h2>
+                <span class="line-gray"></span>
             </div>
             <div>
-                <h3>
-                    Work Traceability
-                </h3>
-                <img src="assests/img.png/work-traceability-picture.png" alt="Work Traceability picture">
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                    make a type specimen book.
-                </p>
-            </div>
-            <div>
-                <h3>
-                Leadership and team management
-                </h3>
-                <img src="assests/img.png/leadership-and-team- management-picture.png" alt="Leadership and team management">
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                    make a type specimen book.
-                </p>
-            </div>
-            <div>
-                <h3>
-                    Decision making
-                </h3>
-                <img src="assests/img.png/decision-making-picture.png" alt="Decision making picture">
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                    make a type specimen book.
-                </p>
+                <div class="main-container">
+                    <div class="cards-container">
+                        <div class="card-box">
+                            <div class="box-60p">
+                                <h3 class="text-size-35">
+                                    Productivity Booster
+                                </h3>
+                                <span class="line-greenblue"></span>
+                                <p class="text-size-30 card-text-container">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                                </p>
+                            </div>
+                            <img class="box-40p card-img" src="assests/img.png/productivy-booter-picture.png" alt="Productivity Booster image">
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-gray">
+                    <div class="main-container">
+                        <div class="cards-container">
+                            <div class="card-box">
+                                <img class="box-40p card-img" src="./assets/img/work-traceability.png" alt="Work Traceability image">
+                                <div class="box-60p">
+                                    <h3 class="text-size-35">
+                                        Work Traceability
+                                    </h3>
+                                    <span class="line-white"></span>
+                                    <p class="text-size-30 card-text-container">
+                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-container">
+                    <div class="cards-container">
+                        <div class="card-box">
+                            <div class="box-60p">
+                                <h3 class="text-size-35">
+                                    Leadership and Team Management
+                                </h3>
+                                <span class="line-gray-thin"></span>
+                                <p class="text-size-30 text-container">
+                                <p class="text-size-30 card-text-container">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                                </p>
+                            </div>
+                            <img class="box-40p card-img" src="./assets/img/leadership.png" alt="Leadership and team management image">
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-gray">
+                    <div class="main-container">
+                        <div class="cards-container">
+                            <div class="card-box">
+                                <img class="box-40p card-img" src="./assets/img/decision-making.png" alt="Decision Making image">
+                                <div class="box-60p">
+                                    <h3 class="text-size-35">
+                                        Decision Making
+                                    </h3>
+                                    <span class="line-white"></span>
+                                    <p class="text-size-30 text-container">
+                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section>
@@ -301,7 +314,6 @@
                     </li>
                 </ol>
         </section>
-    </main>
         <footer>
             <div>
                 <img src="assests/img.png/linkedIn-icon.png" alt="Linked In icon">
