--- a/semana-03/index.html
+++ b/semana-03/index.html
@@ -76,6 +76,8 @@
                             </p>
                         </a>
                     </li>
+                </ul>
+            </div>
         </nav>
     </aside>
     <header>
